2011-04-10  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed build fix for !ENABLE(XSLT) after r82562.

        * dom/XMLDocumentParserLibxml2.cpp:
        (WebCore::XMLDocumentParser::doEnd):

2011-04-10  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed build fix for !ENABLE(XSLT) after r82562.

        * xml/XMLTreeViewer.cpp: Readded #if ENABLE(XSLT).

2011-04-10  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Anders Carlsson.

        REGRESSION(r83256): Text-decoration bleeds into shadow DOM
        https://bugs.webkit.org/show_bug.cgi?id=58205

        Now that the shadow root is a never-styled element, we need to walk to
        parent to find out if we're inside of a shadow DOM subtree.

        Test: media/controls-styling.html

        * css/CSSStyleSelector.cpp:
        (WebCore::isAtShadowBoundary): Added helper function.
        (WebCore::CSSStyleSelector::adjustRenderStyle): Changed to use the helper.

2011-04-07  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Carlson.

        [Meta] Convert HTMLMediaElement to use the new shadow DOM
        https://bugs.webkit.org/show_bug.cgi?id=53020

        This conversion is non-trivial, for several reasons:

        1) Since HTMLMediaElement now hosts the shadow DOM for controls, hiding
        and showing controls does not result in destroying and re-creating the
        shadow DOM tree. Instead, the tree is created as needed and shown/hidden
        using inline styles.
        
        2) Instead of detaching/attaching on each style change, the control parts
        are now using a set of higher fidelity callbacks that notify MediaControls
        about changes to which it should react. Each reaction results in hiding,
        showing, or changing the state of the control parts using inline styles
        and DOM APIs.

        3) Hiding and showing controls is accomplished using inline styles, rather