@@ -1,3 +1,12 @@
+2011-04-10  Chris Guillory  <chris.guillory@google.com>
+
+        Reviewed by Eric Seidel.
+
+        Remove unused function declaration in PlatformContextSkia.h.
+        https://bugs.webkit.org/show_bug.cgi?id=55983
+
+        * platform/graphics/skia/PlatformContextSkia.h:
+
 2011-04-10  Patrick Gansterer  <paroga@webkit.org>
 
         Unreviewed build fix for !ENABLE(XSLT) after r82562.
